# academic-management-system

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  LOGIN_INFO.md  Makefile  PRODUCTION_CHANGES.md  README.md  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  exceptions.py  manage.py  pyproject.toml  pytest.ini  railway.toml  requirements.txt
academics/: __init__.py  admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
academics/migrations/: 0001_initial.py
accounts/: forms.py  tests.py  urls.py  views.py
accounts/templates/accounts/: login.html  signup.html
app/: admin.py  admin_urls.py  apps.py  auth_urls.py  professor_urls.py  student_urls.py  urls.py
app/forms/: __init__.py  admin_forms.py  auth_forms.py  grade_forms.py  user_forms.py
app/migrations/: 0001_initial.py  0002_add_database_indexes.py
app/models/: __init__.py  administrator.py  career.py  custom_user.py  faculty.py  final_exam.py  final_exam_inscription.py  grade.py  professor.py  student.py  subject.py  subject_inscription.py
app/repositories/: __init__.py  administrators.py  base.py  careers.py  faculties.py  final_exam_inscriptions.py  final_exams.py  grades.py  professors.py  students.py  subject_inscriptions.py  subjects.py  users.py
app/services/: __init__.py  assignment_service.py  authentication_service.py  career_service.py  certificate_service.py  faculty_service.py  final_exam_service.py  grade_service.py  inscription_service.py  professor_service.py  student_service.py  subject_service.py  user_management_service.py
app/views/: __init__.py  admin_views.py  auth_views.py  professor_views.py  student_views.py
config/: asgi.py  health_check.py  settings.py  urls.py  wsgi.py
core/: exceptions.py
enrollments/: __init__.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
enrollments/migrations/: 0001_initial.py  0002_initial.py
grading/: apps.py  forms.py  models.py  services.py  urls.py  views.py
grading/migrations/: 0001_initial.py  0002_initial.py
inscriptions/: admin.py  models.py  tests.py
main/: settings.py  urls.py
scripts/: validate_env.py  verify_production.sh
templates/: 403.html  404.html  500.html  base.html  home.html
templates/academics/admin/: assign_professors.html  career_form.html  career_list.html  faculty_form.html  faculty_list.html  subject_form.html  subject_list.html
templates/app/admin/: admin_dashboard.html  assign_professors.html  assign_subjects.html  career_form.html  career_list.html  confirm_delete.html  dashboard.html  faculty_form.html  faculty_list.html  final_form.html  final_list.html  subject_form.html  subject_list.html  user_form.html  user_list.html
templates/app/auth/: login.html
templates/app/professor/: dashboard.html  final_inscriptions.html  grade_form.html  grade_list.html  professor_dashboard.html
templates/app/student/: dashboard.html  inscribe_confirm.html  student_dashboard.html
templates/enrollments/admin/: assign_professors.html  confirm_delete.html  final_form.html  final_list.html
templates/enrollments/student/: available_finals.html  available_subjects.html  final_enroll_confirm.html  my_enrollments.html  subject_enroll_confirm.html
templates/grading/professor/: final_inscriptions.html  grade_form.html  grade_list.html
templates/users/: admin_dashboard.html  login.html  professor_dashboard.html  student_dashboard.html
tests/: conftest.py  test_academics.py  test_accounts.py  test_enrollments.py  test_grading.py  test_inscriptions.py  test_users.py
users/: admin.py  forms.py  mixins.py  models.py  services.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
(+14 files in other folders)
