[project]
name = "academic-management-system"
version = "0.1.0"
description = "Sistema de gestión académica con Django"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["django", "academic", "management", "education"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "django>=5.2.3,<6.0",
    "psycopg2-binary>=2.9.9",
    "gunicorn>=21.2.0",
    "whitenoise>=6.6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# Dependencias de desarrollo
dev = [
    "pytest>=8.0.0",
    "pytest-django>=4.7.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "django-stubs>=4.2.7",
    "ipython>=8.20.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/academic-management-system"
Repository = "https://github.com/yourusername/academic-management-system.git"
Issues = "https://github.com/yourusername/academic-management-system/issues"

[project.scripts]
# Scripts de línea de comandos personalizados (opcional)
ams = "manage:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config", "users", "academics", "enrollments", "grading"]

[tool.uv]
# Configuración específica de uv

[tool.uv.sources]
# Puedes especificar fuentes personalizadas aquí si es necesario

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-django>=4.7.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "django-stubs>=4.2.7",
    "ipython>=8.20.0",
]

[tool.ruff]
line-length = 88
target-version = "py314"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "migrations",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by ruff format)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"*/migrations/*.py" = ["E501", "F401", "F811"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["tests"]
addopts = [
    "--reuse-db",
    "--cov=.",
    "--cov-report=html",
    "--cov-report=term-missing",
    "-v",
]
filterwarnings = [
    "ignore::UserWarning:django.core.handlers.base",
]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.coverage.run]
source = ["."]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "manage.py",
    ".venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
